<resources>
    <string name="app_name">calculator</string>
    <string name="ac">AC</string>
    <string name="pl_mn">+/-</string>
    <string name="procent">%</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="multiplication">x</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="_00">0</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="free">Free</string>
    <string name="price_">Price💰</string>
    <string name="participants">Participants</string>
    <string name="accesibility">Accessibility</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="explore">Explore the nightlife of your city</string>
</resources>